--- a/index.html
+++ b/index.html
@@ -1,70 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  Try It Free
+  <header>
+    <figure>
+      <img src="./images/logo.svg" alt=" huddle logo">
+    </figure>
+    <button>Try It Free</button>
+  </header>
 
-  Build The Community Your Fans Will Love
+  <section class="one">
+    <h1> Build The Community Your Fans Will Love</h1>
+    <p> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+      Create connections with your users as you engage in genuine discussion. </p>
+    <button>Get Started For Free</button>
+    <figure>
+      <img src="./images/illustration-mockups.svg" alt="image of illustrated pages">
+    </figure>
+  </section>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <section class="two">
+    <div class="box">
+      <h2>Grow Together</h2>
+      <p> Generate meaningful discussions with your audience and build a strong, loyal community.
+        Think of the insightful conversations you miss out on with a feedback form.
+      </p>
+      <figure>
+        <img src="./images/illustration-grow-together.svg" alt="illustrated co-workers">
+      </figure>
+    </div>
 
-  Get Started For Free
+    <div class="box">
+      <figure>
+        <img src="./images/illustration-flowing-conversation.svg" alt="illustrated co-workers conversing">
+      </figure>
+      <h2>Flowing Conversations</h2>
+      <p> You wouldn't paginate a conversation in real life, so why do it online? Our threads
+        have just-in-time loading for a more natural flow.</p>
+    </div>
 
-  Grow Together
+    <div class="box">
+      <h2>Your Users</h2>
+      <p> It takes no time at all to integrate Huddle with your app's authentication solution.
+        This means, once signed in to your app, your users can start chatting immediately.</p>
+      <figure>
+        <img src="./images/illustration-your-users.svg" alt="illustrated co-workers showing work">
+      </figure>
+    </div>
+  </section>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
+  <div>
+    <p> Ready To Build Your Community?</p>
+    <button> Get Started For Free</button>
+  </div>
 
   <footer>
+    <figure>
+      <img src="./images/logo.svg" alt="huddle logo">
+    </figure>
+
+    <div>
+      <figure>
+        <img src="./images/icon-location.svg" alt="location pin">
+      </figure>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua</p>
+    </div>
+    <div>
+
+      <figure>
+        <img src="./images/icon-phone.svg" alt="phone illustration">
+      </figure>
+      <a href="tel:+">+1-543-123-4567</a>
+    </div>
+
+    <div>
+
+      <figure>
+        <img src="./images/icon-email.svg" alt="email illustration">
+      </figure>
+      <a href="mailto:">example@huddle.com</a>
+    </div>
+
+    <div>
+      <ul>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer"> About Us</a></li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">What We Do</a></li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">FAQ</a></li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Career</a></li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Blog</a></li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <figure>
+      <!-- <img src="./images/" alt=""> -->
+    </figure>
+
+    <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
 </body>
+
 </html>
