--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 
   <section class="two">
     <div class="box">
-      <h2>Grow Together</h2>
-      <p> Generate meaningful discussions with your audience and build a strong, loyal community.
-        Think of the insightful conversations you miss out on with a feedback form.
-      </p>
+      <div class="together">
+        <h2>Grow Together</h2>
+        <p> Generate meaningful discussions with your audience and build a strong, loyal community.
+          Think of the insightful conversations you miss out on with a feedback form.
+        </p>
+      </div>
       <figure>
         <img src="./images/illustration-grow-together.svg" alt="illustrated co-workers">
       </figure>
@@ -46,22 +48,26 @@
       <figure>
         <img src="./images/illustration-flowing-conversation.svg" alt="illustrated co-workers conversing">
       </figure>
-      <h2>Flowing Conversations</h2>
-      <p> You wouldn't paginate a conversation in real life, so why do it online? Our threads
-        have just-in-time loading for a more natural flow.</p>
+      <div class="together">
+        <h2>Flowing Conversations</h2>
+        <p> You wouldn't paginate a conversation in real life, so why do it online? Our threads
+          have just-in-time loading for a more natural flow.</p>
+        </div>
     </div>
 
     <div class="box">
-      <h2>Your Users</h2>
-      <p> It takes no time at all to integrate Huddle with your app's authentication solution.
-        This means, once signed in to your app, your users can start chatting immediately.</p>
+      <div class="together">
+        <h2>Your Users</h2>
+        <p> It takes no time at all to integrate Huddle with your app's authentication solution.
+          This means, once signed in to your app, your users can start chatting immediately.</p>
+        </div>
       <figure>
         <img src="./images/illustration-your-users.svg" alt="illustrated co-workers showing work">
       </figure>
     </div>
   </section>
 
-  <div>
+  <div class="build">
     <p> Ready To Build Your Community?</p>
     <button> Get Started For Free</button>
   </div>
