--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
@@ -13,23 +11,26 @@
 </head>
 
 <body>
+  <div class="hero">
+    <header>
+      <figure>
+        <img src="./images/logo.svg" alt=" huddle logo">
+      </figure>
+      <button>Try It Free</button>
+    </header>
 
-  <header>
-    <figure>
-      <img src="./images/logo.svg" alt=" huddle logo">
-    </figure>
-    <button>Try It Free</button>
-  </header>
-
-  <section class="one">
-    <h1> Build The Community Your Fans Will Love</h1>
-    <p> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-      Create connections with your users as you engage in genuine discussion. </p>
-    <button>Get Started For Free</button>
-    <figure>
-      <img src="./images/illustration-mockups.svg" alt="image of illustrated pages">
-    </figure>
-  </section>
+    <section class="one"> 
+      <div class="first">
+        <h1> Build The Community Your Fans Will Love</h1>
+        <p> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+          Create connections with your users as you engage in genuine discussion. </p>
+        <button class="btn">Get Started For Free</button>
+      </div>
+      <figure>
+        <img src="./images/illustration-mockups.svg" alt="image of illustrated pages">
+      </figure>
+    </section>
+  </div>
 
   <section class="two">
     <div class="box">
@@ -52,7 +53,7 @@
         <h2>Flowing Conversations</h2>
         <p> You wouldn't paginate a conversation in real life, so why do it online? Our threads
           have just-in-time loading for a more natural flow.</p>
-        </div>
+      </div>
     </div>
 
     <div class="box">
@@ -60,7 +61,7 @@
         <h2>Your Users</h2>
         <p> It takes no time at all to integrate Huddle with your app's authentication solution.
           This means, once signed in to your app, your users can start chatting immediately.</p>
-        </div>
+      </div>
       <figure>
         <img src="./images/illustration-your-users.svg" alt="illustrated co-workers showing work">
       </figure>
@@ -69,7 +70,7 @@
 
   <div class="build">
     <p> Ready To Build Your Community?</p>
-    <button> Get Started For Free</button>
+    <button class="btn"> Get Started For Free</button>
   </div>
 
   <footer>
