--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
@@ -19,9 +23,10 @@
       <button>Try It Free</button>
     </header>
 
-    <section class="one"> 
+    <section class="one">
       <div class="first">
-        <h1> Build The Community Your Fans Will Love</h1>
+        <h1> Build The Community</h1>
+        <h2>Your Fans Will Love</h2>
         <p> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
           Create connections with your users as you engage in genuine discussion. </p>
         <button class="btn">Get Started For Free</button>
@@ -35,7 +40,7 @@
   <section class="two">
     <div class="box">
       <div class="together">
-        <h2>Grow Together</h2>
+        <h3>Grow Together</h3>
         <p> Generate meaningful discussions with your audience and build a strong, loyal community.
           Think of the insightful conversations you miss out on with a feedback form.
         </p>
@@ -45,12 +50,12 @@
       </figure>
     </div>
 
-    <div class="box">
+    <div class="box middle">
       <figure>
         <img src="./images/illustration-flowing-conversation.svg" alt="illustrated co-workers conversing">
       </figure>
       <div class="together">
-        <h2>Flowing Conversations</h2>
+        <h3>Flowing Conversations</h3>
         <p> You wouldn't paginate a conversation in real life, so why do it online? Our threads
           have just-in-time loading for a more natural flow.</p>
       </div>
@@ -58,7 +63,7 @@
 
     <div class="box">
       <div class="together">
-        <h2>Your Users</h2>
+        <h3>Your Users</h3>
         <p> It takes no time at all to integrate Huddle with your app's authentication solution.
           This means, once signed in to your app, your users can start chatting immediately.</p>
       </div>
