--- a/index.html
+++ b/index.html
@@ -84,43 +84,54 @@
       <img src="./images/logo.svg" alt="huddle logo">
     </figure>
 
-    <div>
-      <figure>
-        <img src="./images/icon-location.svg" alt="location pin">
-      </figure>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua</p>
-    </div>
-    <div>
+    <div class="bottom">
+      <section class="contact">
+        <div class="location">
+          <figure>
+            <img src="./images/icon-location.svg" alt="location pin">
+          </figure>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua</p>
+        </div>
+
+        <div class="phone">
+          <figure>
+            <img src="./images/icon-phone.svg" alt="phone illustration">
+          </figure>
+          <a href="tel:+">+1-543-123-4567</a>
+        </div>
+
+        <div class="email">
+          <figure>
+            <img src="./images/icon-email.svg" alt="email illustration">
+          </figure>
+          <a href="mailto:">example@huddle.com</a>
+        </div>
+      </section>
+
+      <div class="about">
+        <ul>
+          <li><a href="http://" target="_blank" rel="noopener noreferrer"> About Us</a></li>
+          <li><a href="http://" target="_blank" rel="noopener noreferrer">What We Do</a></li>
+          <li><a href="http://" target="_blank" rel="noopener noreferrer">FAQ</a></li>
+        </ul>
+      </div>
+
+      <div class="career">
+        <ul>
+          <li><a href="http://" target="_blank" rel="noopener noreferrer">Career</a></li>
+          <li><a href="http://" target="_blank" rel="noopener noreferrer">Blog</a></li>
+          <li><a href="http://" target="_blank" rel="noopener noreferrer">Contact Us</a></li>
+        </ul>
+      </div>
 
       <figure>
-        <img src="./images/icon-phone.svg" alt="phone illustration">
+        <a href=""><img src="./images/facebook.png" alt="facebook icon"></a>
+        <a href=""><img src="./images/twitter.png" alt="twitter icon"></a>
+        <a href=""><img src="./images/instagram.png" alt="instagram icon"></a>
+        <a href=""><img src="./images/github.png" alt="github icon"></a>
       </figure>
-      <a href="tel:+">+1-543-123-4567</a>
     </div>
-
-    <div>
-
-      <figure>
-        <img src="./images/icon-email.svg" alt="email illustration">
-      </figure>
-      <a href="mailto:">example@huddle.com</a>
-    </div>
-
-    <div>
-      <ul>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer"> About Us</a></li>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer">What We Do</a></li>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer">FAQ</a></li>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer">Career</a></li>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer">Blog</a></li>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer">Contact Us</a></li>
-      </ul>
-    </div>
-
-    <figure>
-      <!-- <img src="./images/" alt=""> -->
-    </figure>
 
     <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
 
