--- a/index.html
+++ b/index.html
@@ -109,33 +109,39 @@
         </div>
       </section>
 
-      <div class="about">
-        <ul>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer"> About Us</a></li>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer">What We Do</a></li>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer">FAQ</a></li>
-        </ul>
+      <section class="second">
+        <div class="about">
+          <ul>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer"> About Us</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">What We Do</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">FAQ</a></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="third">
+        <div class="career">
+          <ul>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Career</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Blog</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Contact Us</a></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="fourth">
+        <figure>
+          <a href=""><img src="./images/facebook.png" alt="facebook icon"></a>
+          <a href=""><img src="./images/twitter.png" alt="twitter icon"></a>
+          <a href=""><img src="./images/instagram.png" alt="instagram icon"></a>
+          <a href=""><img src="./images/github.png" alt="github icon"></a>
+        </figure>
       </div>
+    </section>
 
-      <div class="career">
-        <ul>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer">Career</a></li>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer">Blog</a></li>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer">Contact Us</a></li>
-        </ul>
-      </div>
+    <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
 
-      <figure>
-        <a href=""><img src="./images/facebook.png" alt="facebook icon"></a>
-        <a href=""><img src="./images/twitter.png" alt="twitter icon"></a>
-        <a href=""><img src="./images/instagram.png" alt="instagram icon"></a>
-        <a href=""><img src="./images/github.png" alt="github icon"></a>
-      </figure>
-    </div>
-
-    <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
-
-    <p class="attribution">
+    <p class="attribution fixed">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </p>
