--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
       <section class="second">
         <div class="about">
           <ul>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer"> About Us</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">What We Do</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">FAQ</a></li>
+            <li><a href="https://marianellag1.github.io/landinghuddle-musical-dollop/"> About Us</a></li>
+            <li><a href="https://marianellag1.github.io/landinghuddle-musical-dollop/">What We Do</a></li>
+            <li><a href="https://marianellag1.github.io/landinghuddle-musical-dollop/">FAQ</a></li>
           </ul>
         </div>
       </section>
@@ -122,19 +122,19 @@
       <section class="third">
         <div class="career">
           <ul>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Career</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Blog</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Contact Us</a></li>
+            <li><a href="https://marianellag1.github.io/landinghuddle-musical-dollop/">Career</a></li>
+            <li><a href="https://marianellag1.github.io/landinghuddle-musical-dollop/">Blog</a></li>
+            <li><a href="https://marianellag1.github.io/landinghuddle-musical-dollop/" >Contact Us</a></li>
           </ul>
         </div>
       </section>
 
       <section class="fourth">
         <figure>
-          <a href=""><img src="./images/facebook.png" alt="facebook icon"></a>
-          <a href=""><img src="./images/twitter.png" alt="twitter icon"></a>
-          <a href=""><img src="./images/instagram.png" alt="instagram icon"></a>
-          <a href=""><img src="./images/github.png" alt="github icon"></a>
+          <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.png" alt="facebook icon"></a>
+          <a href="https://twitter.com/?lang=en" target="_blank"><img src="./images/twitter.png" alt="twitter icon"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram.png" alt="instagram icon"></a>
+          <a href="https://github.com/Marianellag1" target="_blank"><img src="./images/github.png" alt="github icon"></a>
         </figure>
       </div>
     </section>
@@ -143,7 +143,7 @@
 
     <p class="attribution fixed">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/Marianellag1">Marianella Gamboa</a>.
     </p>
   </footer>
 </body>
