--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <footer>
     <figure>
-      <img src="./images/logo.svg" alt="huddle logo">
+      <img class="huddle" src="./images/logo.svg" alt="huddle logo">
     </figure>
 
     <div class="bottom">
